--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "homepage": "https://github.com/teeli/autoaction#readme",
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-redux": "^4.0.0"
+    "react": ">= ^15.0.0",
+    "react-redux": ">= ^4.0.0"
   },
   "devDependencies": {
      "babel-cli": "^6.10.1",
